Make app icons round and update theme with z-index fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 :root {
 	--radius: 0.625rem;
 	--background: oklch(1 0 0);
-	--foreground: oklch(0.147 0.004 49.25);
+	--foreground: oklch(0.141 0.005 285.823);
 	--card: oklch(1 0 0);
 	--card-foreground: oklch(0.141 0.005 285.823);
 	--popover: oklch(1 0 0);
@@ -39,8 +39,8 @@
 
 @media screen and (prefers-color-scheme: dark) {
 	:root {
-		--background: oklch(0.147 0.004 49.25);
-		--foreground: oklch(0.985 0.001 106.423);
+		--background: oklch(0.141 0.005 285.823);
+		--foreground: oklch(0.985 0 0);
 		--card: oklch(0.21 0.006 285.885);
 		--card-foreground: oklch(0.985 0 0);
 		--popover: oklch(0.216 0.006 56.043);
@@ -132,6 +132,6 @@
 		@apply border-border outline-none underline-offset-4;
 	}
 	body {
-		@apply bg-background text-foreground font-sans;
+		@apply bg-background text-foreground font-sans overflow-x-hidden;
 	}
 }
